--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "redux",
+  "name": "redux-tut",
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
     "react-scripts": "0.4.1"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "redux-actions": "^0.12.0"
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "redux-actions": "^0.12.0",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
