--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "redux-tut",
   "version": "0.0.1",
   "private": true,
-  "homepage": "http://myname.github.io/myapp",
+  "homepage": "http://hshoff.github.io/hackernews",
   "devDependencies": {
     "now": "^0.25.0",
     "now-serve": "^0.4.0",
